@startuml
!theme plain

title TimeSlave Class Diagram

legend top left
    |= Color          |= Description              |
    | <#LightCyan>    | TimeSlave application      |
    | <#LightSalmon>  | gPTP Engine core           |
    | <#Wheat>        | Protocol processing        |
    | <#Lavender>     | PHC adjustment             |
    | <#LightPink>    | IPC components             |
    | <#Beige>        | Data structures            |
endlegend

package "score::ts" {

    class TimeSlave #LightCyan {
        - opts_ : GptpEngineOptions
        - engine_ : unique_ptr<GptpEngine>
        - publisher_ : GptpIpcPublisher
        + Initialize(ctx) : int32_t
        + Run(stop_token) : int32_t
    }

    class GptpEngine #LightSalmon {
        - opts_ : GptpEngineOptions
        - rx_thread_ : std::thread
        - pdelay_thread_ : std::thread
        - sync_sm_ : SyncStateMachine
        - pdelay_ : PeerDelayMeasurer
        - phc_adjuster_ : PhcAdjuster
        - socket_ : unique_ptr<IRawSocket>
        - identity_ : unique_ptr<INetworkIdentity>
        - codec_ : FrameCodec
        - parser_ : GptpMessageParser
        - snapshot_mutex_ : std::mutex
        - pending_snapshot_ : GptpIpcData
        - current_snapshot_ : GptpIpcData
        + Initialize() : bool
        + Deinitialize() : bool
        + FinalizeSnapshot() : void
        + ReadPTPSnapshot(data : GptpIpcData&) : bool
    }

    struct GptpEngineOptions #Beige {
        + iface_name : string = "eth0"
        + pdelay_interval_ms : int = 1000
        + pdelay_warmup_ms : int = 2000
        + sync_timeout_ms : int = 3300
        + jump_future_threshold_ns : int64_t = 500000000
    }

    TimeSlave *-- GptpEngine
}

package "score::ts::details" {
    class FrameCodec #Wheat {
        + ParseEthernetHeader(frame, frame_len, ptp_offset) : bool
        + AddEthernetHeader(buf, buf_len, src_mac, buf_capacity) : bool
    }

    class GptpMessageParser #Wheat {
        + Parse(payload, len, msg_out) : bool
    }

    class SyncStateMachine #Wheat {
        - timeout_ : atomic<bool>
        + OnSync(msg) : void
        + OnFollowUp(msg) : optional<SyncResult>
        + IsTimeout() : bool
        + GetNeighborRateRatio() : double
    }

    class PeerDelayMeasurer #Wheat {
        - mutex_ : std::mutex
        - result_ : PDelayResult
        + SendRequest(socket) : void
        + OnResponse(msg) : void
        + OnResponseFollowUp(msg) : void
        + GetResult() : PDelayResult
    }

    struct SyncResult #Beige {
        + master_ns : int64_t
        + offset_ns : int64_t
        + sync_fup_data : GptpIpcSyncFupData
        + time_jump_forward : bool
        + time_jump_backward : bool
    }

    struct PDelayResult #Beige {
        + pdelay_data : GptpIpcPDelayData
        + valid : bool
    }

    class GptpIpcPublisher #LightPink {
        - region_ : GptpIpcRegion*
        - shm_fd_ : int
        + Init(name) : bool
        + Publish(data : GptpIpcData) : void
        + Destroy() : void
    }

    class PhcAdjuster #Lavender {
        - cfg_ : PhcConfig
        - phc_fd_ : int
        + IsEnabled() : bool
        + AdjustOffset(offset_ns) : void
        + AdjustFrequency(rate_ratio) : void
    }

    struct PhcConfig #Beige {
        + enabled : bool = false
        + device : string
        + step_threshold_ns : int64_t = 100000000
    }
}

GptpEngine *-- FrameCodec
GptpEngine *-- GptpMessageParser
GptpEngine *-- SyncStateMachine
GptpEngine *-- PeerDelayMeasurer
GptpEngine *-- PhcAdjuster
PhcAdjuster *-- PhcConfig
TimeSlave *-- "1" GptpIpcPublisher

@enduml
